syntax = "proto3";

package techschool.pcbook;

option go_package = "github.com/betNevS/code-examples/protobuf/pcbook/pb";

import "laptop_message.proto";

message CreateLaptopRequest {
  Laptop laptop = 1;
}

message CreateLaptopResponse {
  string id = 1;
}

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse);
}